main.css
/* ... */
.info3-person-card-img{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.info3-person-card-name{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    line-height: 24px;
    text-align: center;
    letter-spacing: -0.02em;
    color: #303031;

    margin-top: 16px;
    margin-bottom: 4px;
}

.info3-person-card-profession{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    text-align: center;
    letter-spacing: -0.02em;

    color: #66645E;
}

.info3-person-card-ration-text{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #303031;
}

.info3-person-card-ration{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 24px;
    color: #303031
}

.info3-person-card-button{
    width: 192px;
    height: 44px;
    background: #303031;
    border-radius: 16px;
    padding: 12px 24px;

    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 20px;
    letter-spacing: -0.02em;

    color: #FFFFFF;
}

.applicant-img{
    height: 40px;
    width: 40px;
    margin-right: 16px;
    margin-bottom: 24px;
}

.applicant-name{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 600;
    font-size: 20px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #303031;
    display: inline-block;
    vertical-align: top;
    padding-top: 10px;
}

.applicant-raiting{
    display: inline-block;
    justify-self: end;
    vertical-align: top;
    padding-top: 10px;

    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 24px;
    color: #303031;
}

.section-help{
    margin-top: 160px - 164px;
}

.help-card-item{
    width: 427px;
    height: 216px;
    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
    border-radius: 16px;
    padding: 24px;
}

.help-card-header{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #303031;
    margin-bottom: 16px;
}

.help-card-description{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #303031;
    margin-bottom: 24px;
}

.help-footer{
    display: flex;
}

.help-green-oval{
    padding: 6px 8px 0px 8px;
    background: #71A894;
    border-radius: 40px;

    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #FFFFFF;
}

.help-date{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    line-height: 24px;
    text-align: right;
    letter-spacing: -0.02em;
    color: #303031;
    margin-left: auto;
    padding-top: 8px;
}

.help-view-more-button{
    display: block;
    width: 136px;
    height: 64px;
    background: #303031;
    border-radius: 8px;

    font-family: 'Proxima Nova';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 24px;
    text-align: center;
    color: #FFFFFF;
    margin: 48px auto 0px auto;
}

.dotted-divider{
    margin-top: 44px;
    height: 72px;
    width: 100%;
    background: url('imgs/dotted_divider.png');
}

.section-ending{
    margin-top: 73px;
    background-image: url("imgs/pablo-sign-in.png");
    background-repeat: no-repeat;    
    background-position: right;
    height: 361px;
}

.ending-text-block{
    padding-top: 59px;
    margin-left: 199px;
}

.ending-title{
    font-family: 'Bely Display';
    font-style: normal;
    font-weight: 400;
    font-size: 48px;
    line-height: 64px;
    color: #303031;
    margin-bottom: 24px;
}

.ending-text{
    margin-bottom: 40px;
}

.yellow-star{
    display: inline-block;
    width: 20px;
    height: 19px;
    background-image: url('imgs/star.svg');
    background-repeat: no-repeat;
    vertical-align: middle;
    margin-right: 8px;
    margin-bottom: 8px;
}

